...

export const WelcomeScreen = observer(function WelcomeScreen() {
  const navigation = useNavigation();
  const nextScreen = () => navigation.navigate("signInScreen");

  return (
    <View style={FULL} testID="welcomeMessage">
      <Screen style={CONTAINER} preset="scroll" backgroundColor={background}>
        <Image source={require("../../../assets/dp.png")} style={styles.image} />
        <Text style={TITLE_WRAPPER}>
          <Text style={TITLE} text="Welcome to Daily Dash !" />
        </Text>
        <View style={FOOTER_CONTENT}>
          <Button
            testID="nextScreenButton"
            style={styles.button}
            textStyle={CONTINUE_TEXT}
            tx="welcomeScreen.continue"
            onPress={nextScreen}
          />
          <Image source={require("../../../assets/running.png")} style={styles.image2} />
...
