...
        {/* </Swipeable> */}
      </View>
    );
  };

  return (
    <View style={FULL} testID="homeScreenWrap">
      <Screen style={FULL} backgroundColor={color.palette.white}>
        <View>
          <Text style={styles.quoteLeft}>
            A journey of a thousand miles ...
          </Text>
          <Image style={styles.image}
...
          </Text>
          <Text style={{ ...styles.subheading, ...SMALL_TOP_MARGIN }}>🌱</Text>
        </View>
        <Separator/>
        { goals.length === 0 && dailyGoalStore.visible &&
          <View style={NO_GOALS_MESSAGE}>
            <Text testID="noGoalsMessage">
              You don't have any goals 😮
            </Text>
            <Button style={ADD_ONE_BUTTON} text="Add one" onPress={goToAddGoal}></Button>
          </View>}
        <FlatList
          style={LIST_STYLE}
...
